# theallelectricsmartgrid

./: .gitignore  .gitmodules  AGENTS.md  BUGS.md  CHANGELOG.txt  plugin.json
.cursor/skills/add-source-machine/: SKILL.md
.cursor/skills/add-visualizer/: SKILL.md
.cursor/skills/build-smart-grid-one/: SKILL.md
.cursor/skills/create-parameter/: SKILL.md
.pi/prompts/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md  opsx-sync.md
GridControl/: Event.hpp  GridButton.hpp  Protocol.hpp  Socket.hpp  launcher.sh
GridControl/JUCE/GridControl/: GridControl.jucer
GridControl/py/: Client.py  Event.py  Grid.py  GridId.py  HardwareServer.py  Socket.py
GridControl/test/: TestProtocol.cpp
JUCE/SmartGridOne/: .gitignore  Makefile  SmartGridOne.jucer
JUCE/SmartGridOne/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
JUCE/SmartGridOne/Source/: BasicPadGrid.hpp  ConfigPage.hpp  Configuration.hpp  EncoderComponent.hpp  EncoderGrid.hpp  FaderComponent.hpp  FilePage.hpp  ForEachModulationVisualizer.hpp  ForEachSmartGridOneVisualizer.hpp  FourteenSegmentDisplayComponent.hpp  IOUtils.cpp  IOUtils.hpp  JoyStickComponent.hpp  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentMenuBarModel.hpp  MasteringComponents.hpp  MeterComponent.hpp  MidiHandlers.hpp  MidiSender.hpp  MidiUtils.hpp  NonagonWrapper.hpp  PadComponent.hpp  PartialMachineComponents.hpp  PatchChooser.hpp  PathDrawer.hpp  QuadDelayEnvelopeVisualizerComponent.hpp  QuadDownSample.hpp  SampleTrioWaveformVisualizerComponent.hpp  ScopeComponent.hpp  SmartGridInclude.hpp  SmartGridOneMainVisualizerComponent.hpp  SmartGridOneVisualizerMain.hpp  VUBarDrawer.hpp  VoiceConfigComponent.hpp  WrldBuildrComponent.hpp  iCloudHelper.mm
TheNonagon/: justfile
TheNonagon/TheNonagon/: AudioEngineController.swift  BottomMenuView.swift  ButtonGridView.swift  CenterView.swift  CoMuteView.swift  ContentView.swift  DisplayLoopController.swift  GridMatrixView.swift  LeftMenuView.swift  MainView.swift  RightMenuView.swift  SettingsView.swift  SmartGrid.cpp  TheNonagon-Bridging-Header.h  TheNonagonApp.swift  TheNonagonBridge.swift  TheoryOfTimeView.swift
TheNonagon/TheNonagon.xcodeproj/: project.pbxproj
TheNonagon/TheNonagon/Cpp/: CircularQueue.h  GridHandle.h  MidiBus.h  MidiSettings.h  MidiUtils.h  NonagonHolder.h  Parameter.h  RGBColor.h  TheNonagonBridgeState.h  TheNonagonBridgeStateWrapper.cpp  TheNonagonBridgeStateWrapper.h
TheNonagon/TheNonagonTests/: TheNonagonTests.swift
TheNonagon/TheNonagonUITests/: TheNonagonUITests.swift  TheNonagonUITestsLaunchTests.swift
docs/: LameJuis.txt  ahd-envelopes.md  comutect.md  deep-vocoder.md  drawing-filter-response.md  dsp-overview.md  encoder-system.md  filter-architecture.md  filter-ladder.md  filter-svf.md  glossary.md  index.md  io-task-thread.md  lamejuis.md  mixdown-mastering.md  multi-phasor-gate.md  nonagon.md  partial-machine.md  phase-vocoder.md  polyxfader-lfos.md  quad-delay.md  quad-panning.md  quad-reverb.md  sampler-looper-recording.md  scene-manager.md  smart-grid-visualizers.md  smart-grid.md  source-machine.md  state-saver.md  sub-oscillator.md  theory-of-time.md  ui-components-layout.md  ui-controller-integrations.md  ui-midi-scheduling.md  ui-routing-buses.md  ui-visualization-pipeline.md
docs/index/: README.md
docs/tex/: TheoryOfTime.tex
openspec/: config.yaml
patches/: WRLD.BLDR.json  WRLD.BLDR.ytx  faders_blue.syx  faders_green.syx  faders_purple.syx  faders_red.syx  lame_juis_p_1.syx  lame_juis_p_2.syx  lame_juis_p_3.syx  lame_juis_p_4.syx  nonagon 42 back.vcv  nonagon 42.vcv  nonagon 43.vcv  nonagon bitwig.vcv  nonagon multitrack.vcv  nonagon.vcv  nonagon_subseq.syx  nonaplay.vcv  smartgrid_1_1.vcv  smartgrid_1_2.vcv
private/: Makefile  plugin.json
private/src/: ADSP.hpp  ADSR.hpp  AHD.hpp  AdaptiveWaveTable.hpp  AnalogUIState.hpp  Array.hpp  AsyncLogger.hpp  AtomicString.hpp  AudioBuffer.hpp  AudioInputBuffer.hpp  BasicMidi.hpp  BasicWaveTable.hpp  BitCrush.hpp  BitSet.hpp  Blink.hpp  BlinkLight.hpp  BufferResampler.hpp  ButterworthFilter.hpp  ButtonBank.hpp  CV_MIDICC.cpp  CardinalMidiInterchange.hpp  CircleTracker.hpp  CircularQueue.hpp  ClockModeConfigJSON.hpp  ClockSelectCell.hpp  Color.cpp  Color.hpp  ColorHelper.hpp  CombFilterWithOnePole.hpp  CombFilterWithSVF.hpp  DCServo.hpp  DataStream.hpp  DebugLog.hpp  DebugMeter.hpp  DeepVocoder.hpp  DelayLine.hpp  DirectoryExplorer.hpp  DualSampleSource.hpp  DualWaveShapingVCO.hpp  Encoder.hpp  (+160 more)
private/test/: CMakeLists.txt  fixtures_espace_etale_2026-06-24T10-40-13.json
private/test/support/: Continuity.hpp  GlobalEnv.hpp  NanScan.hpp  Signal.hpp  Spectral.hpp  StressHelpers.hpp  SynthRig.hpp  SystemFixture.hpp  TempDir.hpp  TestMain.cpp  TimeRig.hpp
private/test/system/: midi_clock_sync.cpp  sys_encoder_reset.cpp  sys_fuzz.cpp  sys_gestures.cpp  sys_json_fixture.cpp  sys_partialmachine_patch_nan.cpp  sys_patch_roundtrip.cpp  sys_recording_roundtrip.cpp  sys_save_arena.cpp  sys_scenes.cpp  sys_smoke.cpp  sys_startup_stability.cpp  sys_theoryoftime_stress.cpp  sys_theoryoftime_topology.cpp
private/test/unit/: clock_mode_config_json.cpp  dsp_adsr.cpp  dsp_ahd.cpp  dsp_butterworth.cpp  dsp_comb.cpp  dsp_crossover.cpp  dsp_delayline.cpp  dsp_dft.cpp  dsp_fir.cpp  dsp_helpers.cpp  dsp_ladder.cpp  dsp_lfo.cpp  dsp_multiphasor.cpp  dsp_op_lowpass.cpp  dsp_partialmachine.cpp  dsp_quaddelay.cpp  dsp_samplesource.cpp  dsp_sourcemixer.cpp  dsp_spectralmodel.cpp  dsp_svf.cpp  dsp_vco.cpp  external_clock_loop_selector.cpp  external_clock_sync.cpp  infra_async_logger.cpp  infra_spike.cpp  json_arena.cpp  juce_nonagonwrapper_output_clear.cpp  midi_realtime.cpp  msg_encoder_set.cpp  patch_load_policy.cpp  squiggleboy_config_sources.cpp  squiggleboy_partialmachine_phase.cpp  time_rig.cpp
scripts/: extract_mod_badges.py  flip_lfo_badge.py  led_check.py  requirements.txt  sync_ipad.py  two_broken_leds.py
src/: LameJuis.cpp  LameJuis.hpp  LameJuisConstants.hpp  LameJuisModel.cpp  Lattice.hpp  LatticeExpander.hpp  LatticeExpanderModel.cpp  plugin.cpp  plugin.hpp
(+124 files in other folders)
